fix text wrapping

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -182,6 +182,7 @@ $padding: 20px;
                     color: white;
                     background-color: transparent;
                     margin-top: 20px;
+                    white-space: nowrap;
 
                     &:hover {
                         border-radius: 5px;
